# openstack_libs

./: .gitignore  README.md  main.py  requirements.txt  rpc_client.py  rpc_server.py  setup.cfg  test-requirements.txt  tox.ini
.testrepository/: 2  times.dbm
common/: config.py
etc/: common.conf  openstack_sample-config-generator.conf  openstack_sample.conf.sample
openstack_sample.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
openstack_sample/cmd/: agent.py  api.py  manage.py  rpc_consumer.py
openstack_sample/conf/: config.py  constant.py  opts.py
openstack_sample/service/: agent.py  rpc_client.py  rpc_consumer.py  server.py  wsgi_app.py
test/: .coverage  nose_target.py  nosetests.xml  test_assert.py  test_nodes.py  test_stack.py  test_unittest.py
tests/: test_unittest.py
tools/: flake8wrap.sh  make_env.sh
