[metadata]
name = openstack_sample
summary = Openstack Sample
description-file =
    README.md
author = Shunya Kitada
author-email = syun.kitada@gmail.com
home-page = https://github.com/syunkitada
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openstack_sample

[entry_points]
console_scripts =
    openstack-api = openstack_sample.cmd.api:main

oslo.config.opts =
    openstack_sample.conf = openstack_sample.conf.opts:list_opts
