[metadata]
name = openstack_sample
summary = Openstack Sample
description-file =
    README.md
author = Shunya Kitada
author-email = syun.kitada@gmail.com
home-page = https://github.com/syunkitada
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openstack_sample

[entry_points]
console_scripts =
    openstack-api = openstack_sample.cmd.api:main
    openstack-rpc-consumer = openstack_sample.cmd.rpc_consumer:main
    openstack-agent = openstack_sample.cmd.agent:main
    openstack-manage = openstack_sample.cmd.manage:main

oslo.config.opts =
    openstack_sample.conf = openstack_sample.conf.opts:list_opts

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
